@@ -1,3 +1,7 @@
+2018-08-17  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* riscv-tdep.c (riscv_has_feature): Add extra comments.
+
 2018-02-13  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* configure.tgt: Add libsim.a as a dependency for riscv.
